moved library to bmdal_reg subfolder and fixed import issues and reran notebooks, added standard deviation to learning curve plots

--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "344dd4ff",
    "metadata": {},
    "outputs": [
@@ -920,14 +920,14 @@
       "\n",
       "\n",
       "\n",
-      "Analyzing results\n",
-      "Alg NN_kmeanspp-tp_ll failed on step 7 of split 0 of task diamonds_256x16: filling up with random samples because selection failed after n_selected = 202\n"
+      "Analyzing results\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alg NN_kmeanspp-tp_ll failed on step 7 of split 0 of task diamonds_256x16: filling up with random samples because selection failed after n_selected = 202\n",
       "Alg NN_kmeanspp-tp_ll_ens-3_rp-512 failed on step 15 of split 1 of task diamonds_256x16: filling up with random samples because selection failed after n_selected = 131\n",
       "Total number of DBAL steps across all experiments: 364800\n",
       "eff dim was larger for grad_rp-512 than for ll in 89.7083% of cases\n",
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fd778f4a",
    "metadata": {},
    "outputs": [
@@ -1429,13 +1429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e4d04ae2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from run_experiments import RunConfigList\n",
-    "from train import ModelTrainer\n",
+    "from bmdal_reg.run_experiments import RunConfigList\n",
+    "from bmdal_reg.train import ModelTrainer\n",
     "\n",
     "# some general configuration for the NN and active learning\n",
     "kwargs = dict(post_sigma=1e-3, maxdet_sigma=1e-3, weight_gain=0.2, bias_gain=0.2, lr=0.375, act='relu')\n",
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c93c8d1d",
    "metadata": {},
    "outputs": [
@@ -1490,14 +1490,14 @@
       "Task ct has n_pool=41712, n_test=10700, n_features=379\n",
       "Task kegg_undir_uci has n_pool=50599, n_test=12921, n_features=27\n",
       "Running all configurations on split 0\n",
-      "Start time: 2022-08-15 16:34:06\n",
-      "Starting job 1/4 after 0s\n",
-      "Starting job 2/4 after 0s\n",
-      "Starting job 3/4 after 0s\n",
-      "Starting job 4/4 after 0s\n",
-      "Running NN_random on split 0 of task kegg_undir_uci_64-128 on device cpu\n",
+      "Start time: 2023-01-25 11:18:24\n",
+      "Starting job 1/4 after 2s\n",
+      "Starting job 2/4 after 2s\n",
+      "Starting job 3/4 after 2s\n",
+      "Starting job 4/4 after 2s\n",
       "Running NN_lcmd-tp_grad_rp-512 on split 0 of task kegg_undir_uci_64-128 on device cpu\n",
       "Running NN_random on split 0 of task ct_64-128 on device cpu\n",
+      "Running NN_random on split 0 of task kegg_undir_uci_64-128 on device cpu\n",
       "Running NN_lcmd-tp_grad_rp-512 on split 0 of task ct_64-128 on device cpu\n",
       "................................................................................................................................................................................................................................................................\n",
       "Test results: MAE=0.34011, RMSE=0.507062, MAXE=2.53953, q95=1.17227, q99=1.83336\n",
@@ -1510,11 +1510,11 @@
       "\n",
       "Performing AL step 1/2 with n_train=64, n_pool=41712, al_batch_size=64\n",
       "................................................................................................................................................................................................................................................................\n",
+      "................................................................................................................................................................................................................................................................\n",
       "Test results: MAE=0.491869, RMSE=0.922071, MAXE=10.8996, q95=1.43869, q99=4.19223\n",
       "\n",
       "\n",
       "Performing AL step 1/2 with n_train=64, n_pool=50599, al_batch_size=64\n",
-      "................................................................................................................................................................................................................................................................\n",
       "Test results: MAE=0.491869, RMSE=0.922071, MAXE=10.8996, q95=1.43869, q99=4.19223\n",
       "\n",
       "\n",
@@ -1559,18 +1559,18 @@
       "\n",
       "\n",
       "Finished running NN_lcmd-tp_grad_rp-512 on split 0 of task kegg_undir_uci_64-128 on device cpu\n",
-      "End time: 2022-08-15 16:38:09\n",
-      "Total time: 4m3s\n",
+      "End time: 2023-01-25 11:23:06\n",
+      "Total time: 4m42s\n",
       "Running all configurations on split 1\n",
-      "Start time: 2022-08-15 16:38:09\n",
-      "Starting job 1/4 after 0s\n",
-      "Starting job 2/4 after 0s\n",
-      "Starting job 3/4 after 0s\n",
-      "Starting job 4/4 after 0s\n",
-      "Running NN_random on split 1 of task kegg_undir_uci_64-128 on device cpu\n",
-      "Running NN_random on split 1 of task ct_64-128 on device cpu\n",
+      "Start time: 2023-01-25 11:23:06\n",
+      "Starting job 1/4 after 1s\n",
+      "Starting job 2/4 after 1s\n",
+      "Starting job 3/4 after 1s\n",
+      "Starting job 4/4 after 1s\n",
       "Running NN_lcmd-tp_grad_rp-512 on split 1 of task kegg_undir_uci_64-128 on device cpu\n",
+      "Running NN_random on split 1 of task kegg_undir_uci_64-128 on device cpu\n",
       "Running NN_lcmd-tp_grad_rp-512 on split 1 of task ct_64-128 on device cpu\n",
+      "Running NN_random on split 1 of task ct_64-128 on device cpu\n",
       "................................................................................................................................................................................................................................................................\n",
       "Test results: MAE=0.329674, RMSE=0.456344, MAXE=2.42349, q95=0.936505, q99=1.6017\n",
       "\n",
@@ -1637,14 +1637,14 @@
       "\n",
       "\n",
       "Finished running NN_lcmd-tp_grad_rp-512 on split 1 of task kegg_undir_uci_64-128 on device cpu\n",
-      "End time: 2022-08-15 16:42:46\n",
-      "Total time: 4m37s\n"
+      "End time: 2023-01-25 11:28:25\n",
+      "Total time: 5m18s\n"
      ]
     }
    ],
    "source": [
-    "from run_experiments import run_experiments\n",
-    "from train import ModelTrainer\n",
+    "from bmdal_reg.run_experiments import run_experiments\n",
+    "from bmdal_reg.train import ModelTrainer\n",
     "run_experiments(exp_name='relu_small', n_splits=2, run_config_list=run_configs, \n",
     "                batch_sizes_configs=[[64, 128]], task_descs=['64-128'], use_pool_for_normalization=True,\n",
     "                max_jobs_per_device=4, n_train_initial=64, ds_names=['ct', 'kegg_undir_uci'], sequential_split=9)"
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "46b149ca",
    "metadata": {},
    "outputs": [
@@ -1716,7 +1716,7 @@
     }
    ],
    "source": [
-    "from evaluation.analysis import ExperimentResults, print_avg_results\n",
+    "from bmdal_reg.evaluation.analysis import ExperimentResults, print_avg_results\n",
     "results = ExperimentResults.load('relu_small')\n",
     "print_avg_results(results, relative_to=None, filter_suffix='')"
    ]
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "682bd4fa",
    "metadata": {},
    "outputs": [
@@ -1791,7 +1791,7 @@
     }
    ],
    "source": [
-    "from evaluation.analysis import print_all_task_results\n",
+    "from bmdal_reg.evaluation.analysis import print_all_task_results\n",
     "print_all_task_results(results)"
    ]
   },
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f5fba3de",
    "metadata": {},
    "outputs": [
@@ -1815,14 +1815,14 @@
        "['ct_64-128', 'kegg_undir_uci_64-128']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from pathlib import Path\n",
-    "import custom_paths\n",
+    "from bmdal_reg import custom_paths\n",
     "os.listdir(Path(custom_paths.get_results_path()) / 'relu_small')"
    ]
   },
@@ -1848,9 +1848,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "bmdal_reg_test2_venv",
    "language": "python",
-   "name": "python3"
+   "name": "bmdal_reg_test2_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1862,7 +1862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
