--- a/examples/framework_details.ipynb
+++ b/examples/framework_details.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "from bmdal.feature_data import TensorFeatureData\n",
+    "from bmdal_reg.bmdal.feature_data import TensorFeatureData\n",
     "import torch\n",
     "\n",
     "data = TensorFeatureData(torch.arange(10)[:, None])\n",
@@ -157,9 +157,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mget_tensor())\n",
-      "File \u001b[0;32m/media/data/prog/projects/batch_active_learning/bmdal/feature_data.py:177\u001b[0m, in \u001b[0;36mFeatureData.__getitem__\u001b[0;34m(self, idxs)\u001b[0m\n\u001b[1;32m    170\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, idxs: Union[torch\u001b[38;5;241m.\u001b[39mTensor, \u001b[38;5;28mslice\u001b[39m, \u001b[38;5;28mint\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndexes\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[1;32m    171\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    172\u001b[0m \u001b[38;5;124;03m    :param idxs: Represents the subset of samples that should be returned.\u001b[39;00m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;124;03m    Note that if idxs is an int, the dimension will not be collapsed.\u001b[39;00m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;124;03m    In other words, self[i] is equivalent to self[i:i+1].\u001b[39;00m\n\u001b[1;32m    175\u001b[0m \u001b[38;5;124;03m    :return: Returns the feature data represented by the subset of indexes in idxs.\u001b[39;00m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 177\u001b[0m     idxs \u001b[38;5;241m=\u001b[39m \u001b[43mIndexes\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_n_samples\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midxs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    178\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mis_all_slice():\n\u001b[1;32m    179\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
-      "File \u001b[0;32m/media/data/prog/projects/batch_active_learning/bmdal/feature_data.py:48\u001b[0m, in \u001b[0;36mIndexes.__init__\u001b[0;34m(self, n_samples, idxs)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(idxs, \u001b[38;5;28mslice\u001b[39m):\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 48\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCannot handle slices with step size other than 1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     49\u001b[0m     start \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m n_samples)\n\u001b[1;32m     50\u001b[0m     stop \u001b[38;5;241m=\u001b[39m n_samples \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m n_samples)\n",
+      "Cell \u001b[0;32mIn [5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mget_tensor())\n",
+      "File \u001b[0;32m/media/data/prog/projects/batch_active_learning/bmdal_reg/bmdal/feature_data.py:177\u001b[0m, in \u001b[0;36mFeatureData.__getitem__\u001b[0;34m(self, idxs)\u001b[0m\n\u001b[1;32m    170\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, idxs: Union[torch\u001b[38;5;241m.\u001b[39mTensor, \u001b[38;5;28mslice\u001b[39m, \u001b[38;5;28mint\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndexes\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[1;32m    171\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    172\u001b[0m \u001b[38;5;124;03m    :param idxs: Represents the subset of samples that should be returned.\u001b[39;00m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;124;03m    Note that if idxs is an int, the dimension will not be collapsed.\u001b[39;00m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;124;03m    In other words, self[i] is equivalent to self[i:i+1].\u001b[39;00m\n\u001b[1;32m    175\u001b[0m \u001b[38;5;124;03m    :return: Returns the feature data represented by the subset of indexes in idxs.\u001b[39;00m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 177\u001b[0m     idxs \u001b[38;5;241m=\u001b[39m \u001b[43mIndexes\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_n_samples\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midxs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    178\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mis_all_slice():\n\u001b[1;32m    179\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "File \u001b[0;32m/media/data/prog/projects/batch_active_learning/bmdal_reg/bmdal/feature_data.py:48\u001b[0m, in \u001b[0;36mIndexes.__init__\u001b[0;34m(self, n_samples, idxs)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(idxs, \u001b[38;5;28mslice\u001b[39m):\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 48\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCannot handle slices with step size other than 1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     49\u001b[0m     start \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m n_samples)\n\u001b[1;32m     50\u001b[0m     stop \u001b[38;5;241m=\u001b[39m n_samples \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m n_samples)\n",
       "\u001b[0;31mValueError\u001b[0m: Cannot handle slices with step size other than 1"
      ]
     }
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bmdal.feature_maps import IdentityFeatureMap\n",
+    "from bmdal_reg.bmdal.feature_maps import IdentityFeatureMap\n",
     "\n",
     "feature_map = IdentityFeatureMap(n_features=1)"
    ]
@@ -222,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "3963197f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bmdal.features import Features\n",
+    "from bmdal_reg.bmdal.features import Features\n",
     "\n",
     "n_features = 1024\n",
     "n_train = 100\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "052bd593",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "43741d4a",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "692beb0f",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "0114e5ae",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bmdal.feature_data.BatchedFeatureData object at 0x7fc1b6b95f40>\n"
+      "<bmdal_reg.bmdal.feature_data.BatchedFeatureData object at 0x7f814930b7c0>\n"
      ]
     }
    ],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "f59298cd",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "869b0794",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "985cca5e",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "3adf49a7",
    "metadata": {},
    "outputs": [
@@ -464,9 +464,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bmdal.feature_maps.SequentialFeatureMap object at 0x7fc1b6bdb670>\n",
-      "[<bmdal.feature_maps.IdentityFeatureMap object at 0x7fc1b6b95ca0>]\n",
-      "<bmdal.feature_maps.LinearFeatureMap object at 0x7fc1b6c82a30>\n"
+      "<bmdal_reg.bmdal.feature_maps.SequentialFeatureMap object at 0x7f814930acb0>\n",
+      "[<bmdal_reg.bmdal.feature_maps.IdentityFeatureMap object at 0x7f814930a1d0>]\n",
+      "<bmdal_reg.bmdal.feature_maps.LinearFeatureMap object at 0x7f8210113d90>\n"
      ]
     }
    ],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "4b59f6e6",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "899238d2",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "01dbb11e",
    "metadata": {},
    "outputs": [
@@ -553,8 +553,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bmdal.feature_maps.IdentityFeatureMap object at 0x7fc1b694a4c0>\n",
-      "<bmdal.feature_data.TensorFeatureData object at 0x7fc1b6c82940>\n"
+      "<bmdal_reg.bmdal.feature_maps.IdentityFeatureMap object at 0x7f814930a3e0>\n",
+      "<bmdal_reg.bmdal.feature_data.TensorFeatureData object at 0x7f8149527e50>\n"
      ]
     }
    ],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "3c5329f1",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "0fc4ebc8",
    "metadata": {},
    "outputs": [
@@ -613,13 +613,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for precomputed: 0.0102644s\n",
-      "Time for not precomputed: 0.0314671s\n"
+      "Time for precomputed: 0.0122815s\n",
+      "Time for not precomputed: 0.0356688s\n"
      ]
     }
    ],
    "source": [
-    "import utils\n",
+    "from bmdal_reg import utils\n",
     "with utils.TimePrinter('precomputed'):\n",
     "    pool_features_sketched_precomputed.get_kernel_matrix(pool_features_sketched_precomputed)\n",
     "with utils.TimePrinter('not precomputed'):\n",
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "09132b48",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
     }
    ],
    "source": [
-    "from bmdal.selection import MaxDistSelectionMethod\n",
+    "from bmdal_reg.bmdal.selection import MaxDistSelectionMethod\n",
     "sel_method = MaxDistSelectionMethod(pool_features=pool_features, train_features=train_features, sel_with_train=True)\n",
     "new_idxs = sel_method.select(5)\n",
     "print(new_idxs)"
@@ -706,9 +706,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "bmdal_reg_test2_venv",
    "language": "python",
-   "name": "python3"
+   "name": "bmdal_reg_test2_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -720,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
