updated data links in benchmark.ipynb

--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -48,7 +48,7 @@
    "id": "7e5ccec5",
    "metadata": {},
    "source": [
-    "Our benchmark results can be generated using the file `run_experiments.py`. This takes around ten days on a workstation with four NVIDIA GeForce RTX 3090 GPUs! In order to use our pre-computed results, download the file `results.tar.gz` which will be published [here](https://doi.org/10.18419/darus-3110) and unpack its contents into the results folder you specified in `custom_paths.py`.\n",
+    "Our benchmark results can be generated using the file `run_experiments.py`. This takes around ten days on a workstation with four NVIDIA GeForce RTX 3090 GPUs! In order to use our pre-computed results, download the file `results.tar.gz` which are published [here](https://doi.org/10.18419/darus-3394) and unpack its contents into the results folder you specified in `custom_paths.py`.\n",
     "\n",
     "If you want to run `run_experiments.py` yourself, for example because you modified it to run your own benchmark configurations, you can for example execute the following command in the main folder:\n",
     "```\n",
@@ -69,7 +69,7 @@
    "id": "26cf0107",
    "metadata": {},
    "source": [
-    "After generating or downloading the result files, we can print and save tables summarizing the results and generate corresponding plots using `run_evaluation.py`. This might take a few minutes for the results from the paper, as these contain data for over a million trained NNs! Note that some of the plot configurations are tailored towards our specific results and might need to be changed if you want to plot your own results. The generated files will be saved in the plots folder that has been configured in `custom_paths.py`. If you are only interested in the generated files, these will also be published [here](https://doi.org/10.18419/darus-3110) in the file `plots.tar.gz`."
+    "After generating or downloading the result files, we can print and save tables summarizing the results and generate corresponding plots using `run_evaluation.py`. This might take a few minutes for the results from the paper, as these contain data for over a million trained NNs! Note that some of the plot configurations are tailored towards our specific results and might need to be changed if you want to plot your own results. The generated files will be saved in the plots folder that has been configured in `custom_paths.py`. If you are only interested in the generated files, these are also published [here](https://doi.org/10.18419/darus-3394) in the file `plots.tar.gz`."
    ]
   },
   {
